header fix
made it a min-height in case headings get too big

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1737,10 +1737,6 @@ footer nav a:hover {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
 .-ml-1 {
   margin-left: -0.25rem;
 }
@@ -1749,9 +1745,6 @@ footer nav a:hover {
 }
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
@@ -1865,6 +1858,9 @@ footer nav a:hover {
 .w-\[14rem\] {
   width: 14rem;
 }
+.w-\[40vh\] {
+  width: 40vh;
+}
 .w-\[60vw\] {
   width: 60vw;
 }
@@ -1876,12 +1872,6 @@ footer nav a:hover {
 }
 .w-full {
   width: 100%;
-}
-.w-\[40vw\] {
-  width: 40vw;
-}
-.w-\[40vh\] {
-  width: 40vh;
 }
 .max-w-2xl {
   max-width: 42rem;
@@ -2047,10 +2037,6 @@ footer nav a:hover {
 .px-5p {
   padding-left: 5%;
   padding-right: 5%;
-}
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 .px-8 {
   padding-left: 2rem;
@@ -2349,6 +2335,9 @@ img {
   }
   .md\:min-h-\[60vh\] {
     min-height: 60vh;
+  }
+  .md\:min-h-\[85vh\] {
+    min-height: 85vh;
   }
   .md\:w-\[40vw\] {
     width: 40vw;
